kubernetes/introspect/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: introspect
  labels:
    app: introspect
    visualize: 'true'
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
    prometheus.io/path: '/metrics'
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  - name: http2
    port: 9090
    protocol: TCP
    targetPort: 9090
  - name: https
    port: 443
    protocol: TCP
    targetPort: 10443
  selector:
    app: introspect
  type: ClusterIP
