kubernetes/introspect/introspect-validatingwh.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: introspect-validationwebook
webhooks:
  - name: introspect.default.svc
    namespaceSelector:
      matchLabels:
        validation: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUU4akNDQXRxZ0F3SUJBZ0lKQUlmZTdpMHA0NGhmTUEwR0NTcUdTSWIzRFFFQkN3VUFNQlV4RXpBUkJnTlYKQkFNTUNtbHVkSEp2YzNCbFkzUXdIaGNOTWpFd09ESTRNVGd3TURJNFdoY05NekV3T0RJMk1UZ3dNREk0V2pBVgpNUk13RVFZRFZRUUREQXBwYm5SeWIzTndaV04wTUlJQ0lqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FnOEFNSUlDCkNnS0NBZ0VBMkcrQ2lrY05hVXEyWmRkK2pJeFBjVFFYMEFKVmk4bUlYTXhqcU9sRlJybk91bnZtbVg4dm9RL0IKOWVzNVY1Tm4vZng5VElmell4SU9haHUvRHdBRU1UVXlvS1B0TWJIaGlmRTllNnJWbEdCYThuM3k2VDN6UVR5eAo4Njlrdi9LcCtI [...]
      service:
        name: introspect
        namespace: default
        path: "/validate"
        port: 9443
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 10
    failurePolicy: Ignore
